@@ -166,7 +166,7 @@ def test_symbolic_expr():
     assert isinstance(sym_expr, gtirb.SymAddrConst)
     assert sym_expr.symbol == puts_sym
     assert sym_expr.offset == 0
-    assert sym_expr.attributes == {gtirb.SymbolicExpression.Attribute.PltRef}
+    assert sym_expr.attributes == {gtirb.SymbolicExpression.Attribute.PLT}
     assert text_section.symbolic_expression_sizes == {1: 4}
 
 
@@ -599,7 +599,7 @@ def test_arm64_sym_attribute_lo12():
     assert text_section.symbolic_expressions[4].symbol is sym
     assert text_section.symbolic_expressions[4].offset == 0
     assert text_section.symbolic_expressions[4].attributes == {
-        gtirb.SymbolicExpression.Attribute.Lo12
+        gtirb.SymbolicExpression.Attribute.LO12
     }
 
 
@@ -626,7 +626,7 @@ def test_arm64_sym_attribute_got():
     assert text_section.symbolic_expressions[0].symbol is sym
     assert text_section.symbolic_expressions[0].offset == 0
     assert text_section.symbolic_expressions[0].attributes == {
-        gtirb.SymbolicExpression.Attribute.GotRef
+        gtirb.SymbolicExpression.Attribute.GOT
     }
 
     assert 4 in text_section.symbolic_expressions
@@ -634,8 +634,8 @@ def test_arm64_sym_attribute_got():
     assert text_section.symbolic_expressions[4].symbol is sym
     assert text_section.symbolic_expressions[4].offset == 0
     assert text_section.symbolic_expressions[4].attributes == {
-        gtirb.SymbolicExpression.Attribute.Lo12,
-        gtirb.SymbolicExpression.Attribute.GotRef,
+        gtirb.SymbolicExpression.Attribute.LO12,
+        gtirb.SymbolicExpression.Attribute.GOT,
     }
 
 
